--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -29,17 +30,25 @@ select, input, button { width:100%; font-size:1.1em; padding:10px; margin:8px 0;
   <option value="poke2num">ポケモン→番号</option>
 </select>
 
-<label>制限時間</label>
-<select id="timeSelect">
-  <option value="0">制限時間なし</option>
-  <option value="3">3秒</option>
-  <option value="5">5秒</option>
-  <option value="10">10秒</option>
-  <option value="20">20秒</option>
-  <option value="30" selected>30秒</option>
-  <option value="45">45秒</option>
-  <option value="60">60秒</option>
+<label>ルール選択</label>
+<select id="ruleSelect">
+  <option value="endless" selected>エンドレス</option>
+  <option value="timeattack">タイムアタック</option>
 </select>
+
+<div id="timeWrapper">
+　<label>制限時間選択</label>
+　<select id="timeSelect">
+　  <option value="0">制限時間なし</option>
+ 　 <option value="3">3秒</option>
+　  <option value="5">5秒</option>
+　  <option value="10">10秒</option>
+ 　 <option value="20">20秒</option>
+　  <option value="30" selected>30秒</option>
+　  <option value="45">45秒</option>
+ 　 <option value="60">60秒</option>
+　</select>
+</div>
 
 <label>世代選択</label>
 <div class="gen-container">
@@ -57,7 +66,8 @@ select, input, button { width:100%; font-size:1.1em; padding:10px; margin:8px 0;
 <div class="gen-note">※メルタン→アローラ　ヒスイ→ガラル</div>
 
 <div id="bestContainer">
-  この時間の最高記録（1位～3位）：<span id="best">0</span>
+  <div id="bestTitle"></div>
+  <div id="bestBody"></div>
 </div>
 
 <div id="message"></div>
@@ -77,6 +87,53 @@ select, input, button { width:100%; font-size:1.1em; padding:10px; margin:8px 0;
 </div>
 
 <script>
+// ゲーム中表示用 0:00:00
+  function formatHMS_Game(sec){
+  const h = Math.floor(sec / 3600);
+  const m = Math.floor((sec % 3600) / 60);
+  const s = sec % 60;
+
+  // 1時間未満
+  if (h === 0) {
+    return `${m}:${String(s).padStart(2,"0")}`;
+}
+
+  // 1時間以上
+  return `${h}:${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}`;
+  }
+
+// リザルト・最高記録用 0時間00分00秒
+  function formatHMS_Result(sec){
+  const h = Math.floor(sec / 3600);
+  const m = Math.floor((sec % 3600) / 60);
+  const s = sec % 60;
+
+  // 1時間未満
+  if (h === 0) {
+    return `${m}分${String(s).padStart(2,"0")}秒`;
+}
+
+  // 1時間以上
+  return `${h}時間${String(m).padStart(2,"0")}分${String(s).padStart(2,"0")}秒`;
+  }
+
+function loadAttackData(key){
+  try {
+    const raw = localStorage.getItem(key);
+    if (!raw) return { score: 0, time: 0, clears: 0 };
+
+    const d = JSON.parse(raw);
+    return {
+      score: Number(d.score) || 0,
+      time: Number(d.time) || 0,
+      clears: Number(d.clears) || 0
+    };
+  } catch (e) {
+    // 壊れていたら初期化
+    return { score: 0, time: 0, clears: 0 };
+  }
+}
+
 let pokemon = {};
 let numbers = [];
 let currentNumber = null;
@@ -84,18 +141,72 @@ let timer = null;
 let timeLeft = 0;
 let limit = 30;
 let score = 0;
+let elapsed = 0;
+let attackTimer = null;
+let attackPool = []; // タイムアタック用・残り出題リスト
+let isPlaying = false;
+let isNewRecord = false; // NEW RECORD判定用
+
+function saveAttackData(key, data){
+  const safe = {
+    score: Math.max(0, Number(data.score) || 0),
+    time: Math.max(0, Number(data.time) || 0),
+    clears: Math.max(0, Number(data.clears) || 0)
+  };
+
+  localStorage.setItem(key, JSON.stringify(safe));
+}
 
 const answer = document.getElementById("answer");
 const timeSelect = document.getElementById("timeSelect");
 const bestContainer = document.getElementById("bestContainer");
 const modeSelect = document.getElementById("modeSelect");
+const ruleSelect = document.getElementById("ruleSelect");
 const genCheckboxes = document.querySelectorAll(".gen-container input[type='checkbox']");
 const messageDiv = document.getElementById("message");
+
+modeSelect.addEventListener("change", () => {
+  if (isPlaying) {
+    forceEndGame();
+    return;
+  }
+  updateBest();
+});
+
 timeSelect.addEventListener("change", () => {
+  if (isPlaying) {
+    forceEndGame();
+    return;
+  }
   limit = Number(timeSelect.value);
   updateBest();
 });
 
+ruleSelect.addEventListener("change", () => {
+
+  if (isPlaying) {
+    forceEndGame();
+    return;
+  }
+  
+  if (ruleSelect.value === "timeattack") {
+    
+    document.getElementById("timeWrapper").classList.add("hidden");
+  } else {
+    
+    document.getElementById("timeWrapper").classList.remove("hidden");
+    limit = Number(timeSelect.value);
+  }
+
+  // リザルトを消す
+  messageDiv.textContent = "";
+  
+  // ルール切替時は世代を必ず全選択に戻す
+  genCheckboxes.forEach(c => c.checked = true);
+  updateBest();
+});
+
+  
 // 日本語正規化
 function normalizeJP(str){
   return str.normalize("NFKC").replace(/[\u3041-\u3096]/g, ch=>String.fromCharCode(ch.charCodeAt(0)+0x60));
@@ -104,24 +215,70 @@ function normalizeJP(str){
 // 世代範囲
 const genRanges = {
   kanto:[1,151], johto:[152,251], hoenn:[252,386], sinnoh:[387,493],
-  unova:[494,649], kalos:[650,721], alola:[722,809], galar:[810,906], paldea:[907,1025]
+  unova:[494,649], kalos:[650,721], alola:[722,809], galar:[810,905], paldea:[906,1025]
 };
+  function getSelectedGenInfo(){
+  const checked = [...genCheckboxes].filter(c => c.checked && c.value !== "all");
+
+  if (checked.length === 0 || checked.length === Object.keys(genRanges).length) {
+    return { name: "全て", max: 1025 };
+  }
+
+  if (checked.length === 1) {
+    const v = checked[0].value;
+    const [s,e] = genRanges[v];
+    const names = {
+      kanto:"カントー", johto:"ジョウト", hoenn:"ホウエン", sinnoh:"シンオウ",
+      unova:"イッシュ", kalos:"カロス", alola:"アローラ",
+      galar:"ガラル", paldea:"パルデア"
+    };
+    return { name: names[v], max: e - s + 1 };
+  }
+
+  // 複数世代
+  let max = 0;
+  checked.forEach(c=>{
+    const [s,e] = genRanges[c.value];
+    max += (e - s + 1);
+  });
+  return { name: "複数世代", max };
+}
 
 // 選択世代番号取得
 function getSelectedNumbers(){
-  let selected=[];
-  let allChecked=true;
-  genCheckboxes.forEach(cb=>{
-    if(cb.value!=='all' && cb.checked){
-      const [s,e]=genRanges[cb.value]||[1,1025];
-      for(let i=s;i<=e;i++) selected.push(i);
+  let selected = [];
+  let allChecked = true;
+
+  genCheckboxes.forEach(cb => {
+    if (cb.value !== "all") {
+      if (cb.checked) {
+        const [s, e] = genRanges[cb.value];
+        for (let i = s; i <= e; i++) selected.push(i);
+      } else {
+        allChecked = false;
+      }
     }
-    if(cb.value!=='all' && !cb.checked) allChecked=false;
   });
-  return {nums:selected, allChecked};
+
+  // ★ 全てチェック時は全世代
+  if (allChecked) {
+    selected = [];
+    Object.values(genRanges).forEach(([s, e]) => {
+      for (let i = s; i <= e; i++) selected.push(i);
+    });
+  }
+
+  return { nums: selected, allChecked };
 }
 
-function bestKey(){ return `pokemon_best_${modeSelect.value}_${limit}`; }
+function bestKey(){ 
+  const info = getSelectedGenInfo();
+  return `pokemon_best_${modeSelect.value}_${limit}_${info.name}`;
+}
+function attackKey(){
+  const info = getSelectedGenInfo();
+  return `pokemon_attack_${modeSelect.value}_${info.name}`;
+}
 
 // JSON読み込み
 fetch("pokemon.json").then(r=>r.json()).then(data=>{
@@ -131,57 +288,175 @@ fetch("pokemon.json").then(r=>r.json()).then(data=>{
 }).catch(()=>alert("pokemon.json の読み込みに失敗しました"));
 
 function updateBest(){
+  
+  const rule = ruleSelect.value;
+  
   const {allChecked} = getSelectedNumbers();
-  if(!allChecked){bestContainer.style.display="none"; return;}
-  bestContainer.style.display="block";
-  const bests=JSON.parse(localStorage.getItem(bestKey())||"[0,0,0]");
-  bestContainer.querySelector("#best").textContent=bests.join(" / ");
+
+// エンドレスは「全て」以外非表示
+if (ruleSelect.value === "endless" && !allChecked) {
+  bestContainer.style.display = "none";
+  return;
+}
+
+// タイムアタックは常に表示
+bestContainer.style.display = "block";
+  
+  // ===== エンドレス =====
+  if (ruleSelect.value === "endless") {
+    document.getElementById("bestTitle").textContent =
+      "この時間の最高記録（1位～3位）";
+
+    const bests = JSON.parse(localStorage.getItem(bestKey())||"[0,0,0]");
+    document.getElementById("bestBody").textContent =
+      bests.join(" / ");
+    return;
+  }
+
+  // ===== タイムアタック =====
+  const info = getSelectedGenInfo();
+
+  // タイムアタックのリザルト表示
+  const key = attackKey();
+  // 読み込み（回復）
+  const data = loadAttackData(key);
+
+  // 👑はクリア済みのみ
+  const crown = data.clears > 0 ? " 👑" :"";
+  document.getElementById("bestTitle").textContent =
+    `${info.name}の最高記録${crown}`;
+
+  // 表示本文を組み立てる
+  let body = `スコア：${data.score}/${info.max}`;
+
+  // 1回以上クリアしている場合のみ追加
+  if (data.clears > 0) {
+    body += `
+    タイム：${formatHMS_Result(data.time)}
+    クリア回数：${data.clears}`;
+  }
+
+  document.getElementById("bestBody").innerText = body;
 }
 
 // 世代チェックトグル
-genCheckboxes.forEach(cb=>cb.addEventListener("change", ()=>{
-  const allCb = Array.from(genCheckboxes).find(c=>c.value==='all');
-  setTimeout(()=>{
-    if(cb.value==='all'){
-      const anyChecked = Array.from(genCheckboxes).some(c=>c.value!=='all' && c.checked);
-      if(anyChecked) genCheckboxes.forEach(c=>c.checked=false);
-      else genCheckboxes.forEach(c=>c.checked=true);
-    } else{
-      allCb.checked = Array.from(genCheckboxes).filter(c=>c.value!=='all').every(c=>c.checked);
+genCheckboxes.forEach(cb => cb.addEventListener("change", () => {
+
+  if (isPlaying) {
+    forceEndGame();
+    return;
+  }
+  
+  const allCb = [...genCheckboxes].find(c => c.value === "all");
+
+  // エンドレス
+  if (ruleSelect.value === "endless") {
+
+    if (cb.value === "all") {
+      const anyChecked = [...genCheckboxes]
+        .some(c => c.value !== "all" && c.checked);
+
+      // 何か選ばれている → 全解除
+      if (anyChecked) {
+        genCheckboxes.forEach(c => c.checked = false);
+      }
+      // 何も選ばれていない → 全選択
+      else {
+        genCheckboxes.forEach(c => c.checked = true);
+      }
+    } else {
+      // 個別変更時は「全て」を解除
+      allCb.checked = false;
     }
-    updateBest();
-  },0);
+  }
+
+  // タイムアタック
+  else {
+    if (cb.value === "all") {
+      genCheckboxes.forEach(c => c.checked = true);
+    } else {
+      genCheckboxes.forEach(c => {
+        c.checked = (c === cb);
+      });
+    }
+  }
+
+  updateBest();
 }));
 
 // ゲーム開始
 function startGame(){
-  score=0;
-  limit=Number(timeSelect.value);
-  document.getElementById("score").textContent=score;
+  isPlaying = true;
+  score = 0;
+  elapsed = 0;
+
+  document.getElementById("score").textContent = score;
   document.getElementById("game").classList.remove("hidden");
-  messageDiv.textContent="";
+  messageDiv.textContent = "";
+
+  clearInterval(timer);
+  clearInterval(attackTimer);
+
+  if (ruleSelect.value === "timeattack") {
+    // タイムアタック用プール作成（重複防止）
+    attackPool = getSelectedNumbers().nums.slice();
+
+    document.getElementById("timer").textContent = formatHMS_Game(elapsed);
+    attackTimer = setInterval(() => {
+      elapsed++;
+      document.getElementById("timer").textContent = formatHMS_Game(elapsed);
+    }, 1000);
+  } else {
+    // エンドレス
+    limit = Number(timeSelect.value);
+  }
+
   nextQuestion();
 }
-
+  
 // 次の問題
 function nextQuestion(){
   clearInterval(timer);
-  const {nums} = getSelectedNumbers();
-  if(nums.length===0){ alert("世代を選択してください"); return; }
 
-  if(limit===0) document.getElementById("timer").textContent="∞";
-  else{
-    timeLeft=limit;
-    document.getElementById("timer").textContent=timeLeft;
-    timer=setInterval(()=>{
-      timeLeft--;
-      document.getElementById("timer").textContent=timeLeft;
-      if(timeLeft<=0) gameOver("時間切れ！");
-    },1000);
+  // ===== タイムアタック =====
+  if (ruleSelect.value === "timeattack") {
+
+    // 全問正解 → クリア
+    if (attackPool.length === 0) {
+      gameOver("🎉 全問クリア！");
+      return;
+    }
+
+    // 残りからランダムで1体取り出す
+    const idx = Math.floor(Math.random() * attackPool.length);
+    currentNumber = attackPool.splice(idx, 1)[0];
   }
 
-  currentNumber=nums[Math.floor(Math.random()*nums.length)];
-  document.getElementById("number").textContent = modeSelect.value==="num2poke"?currentNumber:pokemon[currentNumber];
+  // ===== エンドレス =====
+  else {
+    const {nums} = getSelectedNumbers();
+    if(nums.length===0){ alert("世代を選択してください"); return; }
+
+    if(limit===0){
+      document.getElementById("timer").textContent="∞";
+    } else{
+      timeLeft = limit;
+      document.getElementById("timer").textContent = timeLeft;
+      timer = setInterval(()=>{
+        timeLeft--;
+        document.getElementById("timer").textContent = timeLeft;
+        if(timeLeft<=0) gameOver("時間切れ！");
+      },1000);
+    }
+
+    currentNumber = nums[Math.floor(Math.random()*nums.length)];
+  }
+
+  document.getElementById("number").textContent =
+    modeSelect.value==="num2poke"
+      ? currentNumber
+      : pokemon[currentNumber];
+
   answer.value="";
   answer.focus();
 }
@@ -205,28 +480,108 @@ function checkAnswer(){
 
 // ギブアップ
 function giveUp(){ gameOver("ギブアップ！"); }
-
 // ゲームオーバー
 function gameOver(reason){
   clearInterval(timer);
+  clearInterval(attackTimer);
+
   const {allChecked} = getSelectedNumbers();
+/* ===== エンドレス最高記録 ===== */
   let bests=[0,0,0];
   if(allChecked){
-    bests=JSON.parse(localStorage.getItem(bestKey())||"[0,0,0]");
+    bests = JSON.parse(localStorage.getItem(bestKey())||"[0,0,0]");
     if(score>bests[0]){bests=[score,bests[0],bests[1]];}
     else if(score>bests[1]){bests=[bests[0],score,bests[1]];}
     else if(score>bests[2]){bests[2]=score;}
     localStorage.setItem(bestKey(), JSON.stringify(bests));
   }
 
-  const correctAnswer = modeSelect.value==="num2poke"?pokemon[currentNumber]:currentNumber;
-  let msg = reason + "\nスコア：" + score + "\n答えは「" + correctAnswer + "」";
-  if(allChecked) msg += "\n最高記録：" + bests.join(" / ");
+  /* ===== タイムアタック記録 ===== */
+if (ruleSelect.value === "timeattack") {
+  const key = attackKey();
+  const prev = loadAttackData(key);
+
+  // 「全問クリア」のときだけ true
+  const cleared = reason === "🎉 全問クリア！";
+
+  // スコアは常に最大値
+  const newScore = Math.max(prev.score, score);
+
+  // ★ NEW RECORD 判定をリセット
+isNewRecord = false;
+
+// ★ クリアしたときだけタイム更新 ★
+let newTime = prev.time;
+
+if (cleared) {
+  // 初クリア または 自己ベスト更新
+  if (prev.time === 0 || elapsed < prev.time) {
+    newTime = elapsed;
+    isNewRecord = true; // ★ NEW RECORD！
+  }
+}
+  
+  // クリア回数もクリア時のみ増やす
+  const newClears = prev.clears + (cleared ? 1 : 0);
+
+  saveAttackData(key, {
+    score: newScore,
+    time: newTime,
+    clears: newClears
+  });
+}
+  /* ===== 表示処理 ===== */
+const correctAnswer = modeSelect.value==="num2poke"
+  ? pokemon[currentNumber]
+  : currentNumber;
+
+let msg = "";
+
+if (reason === "🎉 全問クリア！") {
+  const info = getSelectedGenInfo();
+  const masterName = info.name === "全て" ? "図鑑番号" : info.name;
+
+  msg =
+`クリア！おめでとう！
+あなたは${masterName}マスター！
+クリアタイム：${formatHMS_Result(elapsed)}`;
+
+  // NEW RECORD 表示
+  if (isNewRecord) {
+    msg += "\n🎉 NEW RECORD！";
+  }
+}
+else {
+  msg = reason + "\nスコア：" + score +
+        "\n答えは「" + correctAnswer + "」";
+
+  if (ruleSelect.value === "timeattack") {
+    msg += "\nタイム：" + formatHMS_Result(elapsed);
+  }
+}
+
+  if(allChecked){
+    msg += "\n最高記録：" + bests.join(" / ");
+  }
 
   messageDiv.textContent = msg;
   updateBest();
   document.getElementById("game").classList.add("hidden");
+  
+  isPlaying = false;
 }
+
+  // 変更時の強制終了
+  function forceEndGame(){
+  clearInterval(timer);
+  clearInterval(attackTimer);
+  isPlaying = false;
+
+  document.getElementById("game").classList.add("hidden");
+  messageDiv.textContent =
+    "⚠ 設定が変更されたためゲームを終了しました";
+}
+
 </script>
 </body>
 </html>
