--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -560,10 +559,13 @@ else {
   }
 }
 
-  if(allChecked){
-    msg += "\n最高記録：" + bests.join(" / ");
-  }
-
+ // ★ エンドレス ＆ 全て選択 ＆ ゲームオーバー時のみ表示
+if (
+  ruleSelect.value === "endless" &&
+  allChecked
+) {
+  msg += "\n最高記録：" + bests.join(" / ");
+}
   messageDiv.textContent = msg;
   updateBest();
   document.getElementById("game").classList.add("hidden");
@@ -585,3 +587,4 @@ else {
 </script>
 </body>
 </html>
+
